<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/parent"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginTop="0dp"
	android:layout_marginBottom="0dp"
	android:layout_marginLeft="0dp"
	android:layout_marginRight="0dp"
	android:paddingTop="0dp"
	android:paddingBottom="0dp"
	android:paddingLeft="0dp"
	android:paddingRight="0dp"
	tools:context=".MainActivity">
	<LinearLayout
		android:id="@+id/menuLeft"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="0dp"
		android:layout_marginBottom="0dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="0dp"
		android:paddingTop="0dp"
		android:paddingBottom="0dp"
		android:paddingLeft="0dp"
		android:paddingRight="0dp"
		android:orientation="vertical">
		<RelativeLayout
			android:id="@+id/menuLeftIconInternet"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="0dp"
			android:layout_marginRight="0dp"
			android:paddingTop="0dp"
			android:paddingBottom="0dp"
			android:paddingLeft="0dp"
			android:paddingRight="0dp">
			<ImageView
				android:src="@drawable/menu_left_plate"
				android:contentDescription="@string/menuLeftIconInternetDesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
			<ImageView
				android:src="@drawable/menu_left_spaghetti"
				android:contentDescription="@string/menuLeftIconInternetDesc"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
			<ImageView
				android:src="@drawable/menu_left_7_location_web_site"
				android:contentDescription="@string/menuLeftIconInternetDesc"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/menuLeftIconContacts"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="0dp"
			android:layout_marginRight="0dp"
			android:paddingTop="0dp"
			android:paddingBottom="0dp"
			android:paddingLeft="0dp"
			android:paddingRight="0dp">
			<ImageView
				android:src="@drawable/menu_left_plate"
				android:contentDescription="@string/menuLeftIconContactsDesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
			<ImageView
				android:src="@drawable/menu_left_spaghetti"
				android:contentDescription="@string/menuLeftIconContactsDesc"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
			<ImageView
				android:src="@drawable/menu_left_6_social_group"
				android:contentDescription="@string/menuLeftIconContactsDesc"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/menuLeftIconPhone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="0dp"
			android:layout_marginRight="0dp"
			android:paddingTop="0dp"
			android:paddingBottom="0dp"
			android:paddingLeft="0dp"
			android:paddingRight="0dp">
			<ImageView
				android:src="@drawable/menu_left_plate"
				android:contentDescription="@string/menuLeftIconPhoneDesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
			<ImageView
				android:src="@drawable/menu_left_spaghetti"
				android:contentDescription="@string/menuLeftIconPhoneDesc"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
			<ImageView
				android:src="@drawable/menu_left_10_device_access_call"
				android:contentDescription="@string/menuLeftIconPhoneDesc"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/menuLeftIconMessaging"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="0dp"
			android:layout_marginRight="0dp"
			android:paddingTop="0dp"
			android:paddingBottom="0dp"
			android:paddingLeft="0dp"
			android:paddingRight="0dp">
			<ImageView
				android:src="@drawable/menu_left_plate"
				android:contentDescription="@string/menuLeftIconMessagingDesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
			<ImageView
				android:src="@drawable/menu_left_spaghetti"
				android:contentDescription="@string/menuLeftIconMessagingDesc"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
			<ImageView
				android:src="@drawable/menu_left_6_social_chat"
				android:contentDescription="@string/menuLeftIconMessagingDesc"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/menuLeftIconApps"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="0dp"
			android:layout_marginRight="0dp"
			android:paddingTop="0dp"
			android:paddingBottom="0dp"
			android:paddingLeft="0dp"
			android:paddingRight="0dp">
			<ImageView
				android:src="@drawable/menu_left_plate"
				android:contentDescription="@string/menuLeftIconAppsDesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
			<ImageView
				android:src="@drawable/menu_left_spaghetti"
				android:contentDescription="@string/menuLeftIconAppsDesc"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
			<ImageView
				android:src="@drawable/menu_left_10_device_access_storage"
				android:contentDescription="@string/menuLeftIconAppsDesc"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/menuLeftIconPrefs"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="0dp"
			android:layout_marginLeft="0dp"
			android:layout_marginRight="0dp"
			android:paddingTop="0dp"
			android:paddingBottom="0dp"
			android:paddingLeft="0dp"
			android:paddingRight="0dp">
			<ImageView
				android:src="@drawable/menu_left_plate"
				android:contentDescription="@string/menuLeftIconPrefsDesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
			<ImageView
				android:src="@drawable/menu_left_spaghetti"
				android:contentDescription="@string/menuLeftIconPrefsDesc"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
			<ImageView
				android:src="@drawable/menu_left_2_action_settings"
				android:contentDescription="@string/menuLeftIconPrefsDesc"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingTop="0dp"
				android:paddingBottom="0dp"
				android:paddingLeft="0dp"
				android:paddingRight="0dp"/>
		</RelativeLayout>
	</LinearLayout>
	<ImageView
		android:id="@+id/pointerMenuLeft"
		android:src="@drawable/pointer_menu_left_6_social_send_now_flipped"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="0dp"
		android:layout_marginBottom="0dp"
		android:layout_marginLeft="0dp"
		android:layout_marginRight="0dp"
		android:layout_toRightOf="@id/menuLeft"
		android:paddingTop="0dp"
		android:paddingBottom="0dp"
		android:paddingLeft="0dp"
		android:paddingRight="0dp"/>
	<ImageView
		android:id="@+id/separatorMenuLeftRight"
		android:layout_width="2.5dp"
		android:layout_height="0dp"
		android:layout_marginTop="0dp"
		android:layout_marginBottom="0dp"
		android:layout_marginLeft="0dp"
		android:layout_marginRight="0dp"
		android:layout_alignTop="@+id/menuRight"
		android:layout_alignBottom="@id/pointerMenuLeft"
		android:layout_toRightOf="@id/pointerMenuLeft"
		android:paddingTop="0dp"
		android:paddingBottom="0dp"
		android:paddingLeft="0dp"
		android:paddingRight="0dp"/>
	<ImageView
		android:id="@+id/separatorMenuLeftRightII"
		android:layout_width="2.5dp"
		android:layout_height="0dp"
		android:layout_marginTop="0dp"
		android:layout_marginBottom="0dp"
		android:layout_marginLeft="0dp"
		android:layout_marginRight="0dp"
		android:layout_alignTop="@id/pointerMenuLeft"
		android:layout_alignBottom="@+id/menuRight"
		android:layout_toRightOf="@id/pointerMenuLeft"
		android:paddingTop="0dp"
		android:paddingBottom="0dp"
		android:paddingLeft="0dp"
		android:paddingRight="0dp"/>
	<ListView
		android:id="@+id/menuRight"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="20dp"
		android:layout_marginLeft="2.5dp"
		android:layout_marginRight="20dp"
		android:layout_toRightOf="@id/separatorMenuLeftRight"
		android:paddingTop="0dp"
		android:paddingBottom="0dp"
		android:paddingLeft="0dp"
		android:paddingRight="0dp"
		android:divider="#00000000"
		android:dividerHeight="2.5dp"
		android:requiresFadingEdge="vertical"
		android:fadingEdgeLength="20dp"/>
	<ImageView
		android:id="@+id/pointerUp"
		android:src="@drawable/pointer_up_1_navigation_collapse"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="0dp"
		android:layout_marginBottom="0dp"
		android:layout_marginLeft="0dp"
		android:layout_marginRight="0dp"
		android:layout_alignParentTop="true"
		android:layout_alignLeft="@id/menuRight"
		android:layout_alignRight="@id/menuRight"
		android:paddingTop="0dp"
		android:paddingBottom="0dp"
		android:paddingLeft="0dp"
		android:paddingRight="0dp"
		android:scaleType="center"/>
	<ImageView
		android:id="@+id/pointerDown"
		android:src="@drawable/pointer_down_1_navigation_expand"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="0dp"
		android:layout_marginBottom="0dp"
		android:layout_marginLeft="0dp"
		android:layout_marginRight="0dp"
		android:layout_alignParentBottom="true"
		android:layout_alignLeft="@id/menuRight"
		android:layout_alignRight="@id/menuRight"
		android:paddingTop="0dp"
		android:paddingBottom="0dp"
		android:paddingLeft="0dp"
		android:paddingRight="0dp"
		android:scaleType="center"/>
</RelativeLayout>
